# ace-rag-example

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  architecture.md  main.py  pyproject.toml
.beads/: issues.jsonl
ace_rag_example/: api.py  services.py
tests/: test_query.py
