[project]
name = "ace-rag-example"
version = "0.1.0"
description = "RAG web service for natural language queries against indexed documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
